[tool.poetry]
name = "post-sys"
version = "0.1.0"
description = ""
authors = ["miohitokiri5474 <lltzpp>"]
readme = "README.md"
packages = [{include = "post_sys"}]

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
